# Parallel_LSTM

./: .gitignore  CMakeLists.txt  README.md
include/: cuda_matrix.hpp  eigen_matrix.hpp  lstm.hpp  nnlib.hpp  use_cuda.hpp
report/: bibliography.bib  main.tex  style.sty
src/: cuda_kernels.cu  cuda_kernels.hpp  cuda_matrix.cpp  eigen_matrix.cpp  eigen_matrix.hpp  lstm.cpp  lstm.hpp  lstm_par.cpp  lstm_par2.cpp  lstm_par3.cpp  main.cpp  nnlib.cpp  nnlib.hpp
